# software-engineering-guide

./: .gitignore  .lycheeignore  .pre-commit-config.yaml  .vale.ini  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  SITE.md  index.md  justfile  plan.md  pyproject.toml  tasks.md  zensical.toml
.devcontainer/: devcontainer.json
AGENTS/: authoring.md  navigation.md  testing.md
appendices/: A-glossary.md  B-checklists.md  C-templates.md  D-maturity-models.md  E-standards-and-frameworks.md  F-recommended-reading.md  G-adoption-roadmap.md
chapters/: 1.0-people.md  1.1-software-engineering-values.md  1.3-roles-career-ladders-growth.md  1.6-decision-records.md  1.7-engineering-standards-and-exceptions.md  10.0-project-product-program-management.md  10.10-software-engineering-economics.md  10.13-interorganization-collaboration.md  10.2-risk-audit-and-assurance.md  10.3-procurement-open-source-and-licensing.md  10.4-sustaining-large-and-long-lived-systems.md  10.5-ethics-accountability-public-interest.md  10.6-project-management.md  12.1-glossary.md  12.2-checklists.md  12.4-maturity-self-assessment.md  12.7-index.md  2.1-coding-standards-and-style.md  2.10-software-configuration-management.md  2.11-software-quality.md  2.3-apis-and-interface-design.md  2.4-testing-strategy.md  2.6-version-control-and-source-management.md  2.7-documentation.md  2.8-software-requirements.md  2.9-software-construction.md  3.1-architecture-fundamentals.md  3.4-data-architecture-and-storage.md  3.5-scalability-performance-resilience.md  3.9-systems-engineering.md  4.2-application-security.md  4.4-security-operations.md  4.5-privacy-and-data-protection.md  5.0-ui-ux-design.md  5.1-ux-foundations.md  5.2-ui-design-and-design-systems.md  5.4-content-and-communication-design.md  5.5-internationalization-and-localization.md  6.0-artificial-intelligence.md  6.1-ai-strategy-and-readiness.md  (+9 more)
docs/: README.md  index.md
examples/: README.md  okrs-example.md
front-matter/: table-of-contents.md  (+1 more)
(+339 files in other folders)
