[project]
name = "software-engineering-guide"
version = "1.0.0"
description = "Software Engineering Guide: good practices for software developer teams, published with Zensical."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "markdown>=3.7",
    "zensical>=0.0.47",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# The guide_xref package is the Markdown extension that auto-links plain-text
# chapter cross-references ("chapter 8.1") when the site is built.
[tool.hatch.build.targets.wheel]
packages = ["guide_xref"]
